# Qt-WanAndroid

./: .gitignore  CMakeLists.txt  README.md  main.cpp  windows.manifest  windows.rc
res/: qml.qrc
res/base/: Activity.qml  Fragment.qml
res/global/: AppStorage.qml  Router.qml  Theme.qml  qmldir
res/layout/: ActivityColorPicker.qml  ActivityLogin.qml  ActivityMain.qml  ActivityTool.qml  ActivityToolPicture.qml  ActivityToolVideo.qml  ActivityWeb.qml  FragmentCollection.qml  FragmentColorPicker.qml  FragmentHome.qml  FragmentLogin.qml  FragmentMain.qml  FragmentMainHome.qml  FragmentMainProject.qml  FragmentMainTool.qml  FragmentMainTree.qml  FragmentMainWeixin.qml  FragmentSetting.qml  FragmentTool.qml  FragmentToolPicture.qml  FragmentToolVideo.qml  FragmentWeb.qml  main.qml
res/view/: CircularImage.qml  CusButton.qml  CusListView.qml  CusSwitch.qml  ListHeader.qml  ListLoadMore.qml  ListRefresh.qml  Rectangle.qml  Slider.qml  ToastManager.qml
src/application/: Application.cpp  Application.h
src/base/: BaseController.cpp  BaseController.h
src/home/: HomeController.cpp  HomeController.h
src/hotkey/: QHotkey.cpp  QHotkey.h  QHotkey_mac.cpp  QHotkey_p.h  QHotkey_win.cpp  ViewHotkey.cpp  ViewHotkey.h
src/http/: Api.cpp  Api.h  ApiGetArticleList.h  ApiGetTree.h  ApiGetWxArticleList.h  ApiGetWxChapters.h  ApiLogin.h  HttpClient.cpp  HttpClient.h
src/login/: LoginController.cpp  LoginController.h
src/setting/: SettingController.cpp  SettingController.h
src/tool/: ToolController.cpp  ToolController.h
src/tools/: PictureController.cpp  PictureController.h  PictureItem.cpp  PictureItem.h  VideoItem.cpp  VideoItem.h  VideoSurface.cpp  VideoSurface.h  ViewProvider.cpp  ViewProvider.h
src/utils/: ImageUtils.cpp  ImageUtils.h  LogUtils.cpp  LogUtils.h
src/web/: WebController.cpp  WebController.h
